txt-output/53.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: there are several ways to fix the program. No oracle given.            
test c = if c then [1 .. 10] else "abc"          

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\53.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\53.hs:6:20:
    No instance for (Num Char)
      arising from the literal `1' at ill-typed\53.hs:6:20
    Possible fix: add an instance declaration for (Num Char)
    In the expression: 1
    In the expression: [1 .. 10]
    In the expression: if c then [1 .. 10] else "abc"


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\53.hs, ill-typed\53.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\53.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\53.hs:6:21: error:
    * No instance for (Num Char) arising from the literal `1'
    * In the expression: 1
      In the expression: [1 .. 10]
      In the expression: if c then [1 .. 10] else "abc"
  |
6 | test c = if c then [1 .. 10] else "abc"          
  |                     ^
